@@ -8,7 +8,6 @@ import com.mojang.brigadier.exceptions.CommandSyntaxException;
 import com.mojang.logging.LogUtils;
 import java.io.BufferedReader;
 import java.io.IOException;
-import java.nio.charset.StandardCharsets;
 import java.nio.file.FileVisitOption;
 import java.nio.file.Files;
 import java.nio.file.Path;
@@ -27,6 +26,7 @@ import net.minecraft.block.entity.CommandBlockBlockEntity;
 import net.minecraft.block.entity.StructureBlockBlockEntity;
 import net.minecraft.block.enums.StructureBlockMode;
 import net.minecraft.command.argument.BlockStateArgument;
+import net.minecraft.data.DataWriter;
 import net.minecraft.data.dev.NbtProvider;
 import net.minecraft.data.validate.StructureValidatorProvider;
 import net.minecraft.entity.Entity;
@@ -98,10 +98,10 @@ public class StructureTestUtil {
         Bootstrap.initialize();
         Files.walk(Paths.get(testStructuresDirectoryName, new String[0]), new FileVisitOption[0]).filter(path -> path.toString().endsWith(".snbt")).forEach(path -> {
             try {
-                String string = new String(Files.readAllBytes(path), StandardCharsets.UTF_8);
+                String string = Files.readString(path);
                 NbtCompound nbtCompound = NbtHelper.fromNbtProviderString(string);
                 NbtCompound nbtCompound2 = StructureValidatorProvider.update(path.toString(), nbtCompound);
-                NbtProvider.writeTo(path, NbtHelper.toNbtProviderString(nbtCompound2));
+                NbtProvider.writeTo(DataWriter.field_39439, path, NbtHelper.toNbtProviderString(nbtCompound2));
             } catch (CommandSyntaxException | IOException exception) {
                 LOGGER.error("Something went wrong upgrading: {}", path, (Object)exception);
             }
